# Safety-training-dataset

./: .gitignore  Async_run_experiment_eval.py  Async_run_experiment_train.py  EXECUTION_SUMMARY.md  EXECUTION_SUMMARY.txt  LLM 隱藏狀態機率校正與元評估框架 1 1.md  LLM 隱藏狀態機率校正與元評估框架 1.md  LLM 隱藏狀態機率校正與元評估框架 7月24日.md  LLM 隱藏狀態機率校正與元評估框架.md  README.md  TRAPS_CORRECTION_SUMMARY.txt  UNIFIED_FRAMEWORK_GUIDE.md  check_data.py  plot_reliability_diagrams_calibrated.py  plot_reliability_diagrams_uncorrected.py  project_report.md  pyproject.toml  run_06_three_versions_adjusted_data.py  test_dataset.py  test_model.py  uncorrected_graph.py  unified_train.py  utils_calibration.py  wrapper_models.py  🗺️專案階段狀態總結.md
.obsidian/: community-plugins.json  workspace.json
evaluation_pipeline/: __init__.py  step1_generate_scores.py  step1_prepare_test_data.py  step2_calibrate.py  step2_plot_curves.py  step3_plot.py  step3_plot_histograms.py  step4_combine_plots.py
old_python/: evaluate_all_models.py  generate_improved_data.py  generate_test_data.py  plot_adjusted_ratio_analysis.py  plot_advanced_calibration_analysis.py  plot_calibration_comparison.py  plot_isotonic_dynamic.py  plot_isotonic_raw.py  plot_reliability_diagrams_calibrated.py  plot_reliability_diagrams_uncorrected.py  run_01_baseline_and_calibration.py  run_02_data_augmentation_experiments.py  run_03_plot_metrics_comparison.py  run_04_split_label_plots.py  run_05_three_versions_calibration.py  run_07_brier_evaluation.py  run_08_histogram_analytics.py  train_lgb.py  train_lr.py  train_mlp.py  train_rf.py  train_sgd.py
tools/: check_data.py  (+16 more)
(+19 files in other folders)
