[project]
name = "safety-training-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.2",
]
